---
source: vercre-wallet/tests/issuance.rs
assertion_line: 88
expression: app.view(&model)
---
issuer: "http://vercre.io"
offered:
  EmployeeID_JWT:
    format: jwt_vc_json
    scope: EmployeeIDCredential
    cryptographic_binding_methods_supported:
      - "did:jwk"
      - "did:ion"
    cryptographic_suites_supported:
      - ES256K
      - EdDSA
    proof_types_supported:
      - jwt
    display:
      - name: Employee ID
        locale: en-NZ
        logo:
          url: "https://vercre.github.io/assets/vercre-logo-reversed.png"
          alt_text: Vercre Logo
        description: Vercre employee ID credential
        background_color: "#323ed2"
        text_color: "#ffffff"
    credential_definition:
      "@context":
        - "https://www.w3.org/2018/credentials/v1"
        - "https://www.w3.org/2018/credentials/examples/v1"
      type:
        - VerifiableCredential
        - EmployeeIDCredential
      credentialSubject:
        email:
          mandatory: true
          value_type: string
          display:
            - name: Email
              locale: en-NZ
        familyName:
          mandatory: true
          value_type: string
          display:
            - name: Family name
              locale: en-NZ
        givenName:
          mandatory: true
          value_type: string
          display:
            - name: Given name
              locale: en-NZ
status: PendingPin

